页面效果优化

--- a/html/header.html
+++ b/html/header.html
@@ -17,44 +17,40 @@
                         <a><big>Soc</big>ia<small>li</small>cbl<big>oG</big></a>
                     </div>
                     <div class="b-navibar-lr">
-                        <div class="b-navibar-index h-56">
+                        <div class="b-navibar-a h-60">
                             <a>
                                 <span class="span_icon">
-                                <i class="icon iconfont icon-shouye"></i>
                                 </span>首页
                             </a>
                         </div>
-                        <div class="b-navibar-system h-56">
+                        <div class="b-navibar-a h-60">
                             <a>
                                 <span class="span_icon">
-                                <i class="icon iconfont icon-shezhi"></i>
                                 </span>设置
                             </a>
                         </div>
-                    </div>
-                </div>
-                <div class="b-navibar-right h-60">
-                    <div class="b-navibar-r-leftmessage h-56">
+                        <div class="b-navibar-a h-60">
                         <a>
                             <span class="span_icon">
-                            <i class="icon iconfont icon-dianping"></i>
                             </span>留言
                         </a>
                     </div>
-                    <div class="b-navibar-r-share h-56">
+                    <div class="b-navibar-a h-60">
                         <a>
                             <span class="span_icon">
-                            <i class="icon iconfont icon-zonghe"></i>
                             </span>分享
                         </a>
                     </div>
-                    <div class="b-navibar-r-blog h-56">
+                    <div class="b-navibar-a h-60">
                         <a>
                             <span class="span_icon">
-                            <i class="icon iconfont icon-bianji"></i>
                             </span>博客
                         </a>
                     </div>
+                    </div>
+                </div>
+                <div class="b-navibar-right h-60">
+                    
                     <form class="h-60 b-navibar-r-form">
                         <div class="b-navibar-r-input">
                             <span> 
