--- a/html/header.html
+++ b/html/header.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="b-navibar nav_scroll">
-            <div class="b-navibar-main w-1000 h-60">
+            <div class="b-navibar-main h-60">
                 <div class="b-navibar-left">
                     <div class="b-navibar-ll h-60">
                         <a><big>Soc</big>ia<small>li</small>cbl<big>oG</big></a>
